--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,6 +6,13 @@ body{
     margin: 0;
     padding: 0;
 }
+
+#cabecera{
+    background-color: darkcyan;
+    padding: 5;
+    margin: 0 auto;
+}
+
 #container{
     width: 70%;
     padding: 1em;
