--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,16 +1,24 @@
 body{
-    color: blue;
+    color: white;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
     margin: 0;
     padding: 0;
+    background-color: black;
+}
+
+#imagen{
+    width: 50px;
+    height: 50px;
 }
 
 #cabecera{
-    background-color: darkcyan;
+    text-align: center;
+    background-color: gray;
     padding: 5;
     margin: 0 auto;
+    padding-bottom: 50px;
 }
 
 #container{
